@startuml

hide empty attributes
hide empty methods
hide circle

skinparam shadowing false
skinparam classFontStyle Bold
skinparam ActivityBackgroundColor Silver
skinparam ActivityBorderColor DimGray

skinparam classAttributeIconSize 0

skinparam class {
    BackgroundColor Cornsilk
    ArrowColor DimGray
    BorderThickness 1
    BorderColor DimGray
}

title "Filter Command Class Diagram"

class "FilterCommand" as Object\FilterCommand {
     - predicate: MatchingTagPredicate
     + FilterCommand(predicate: MatchingTagPredicate)
     + execute(model: Model) : CommandResult
     + equals(other: Object) : boolean
}

Interface "Command" as Object\Command <<abstract>> {
    + execute(model)
}

class "Model" as Object\Model <<interface>> {
    - addressbook: AddressBook
    + updateFilteredPersonList(predicate: Predicate<Person>): void
}

class "Person" as Object\Person {
    - companyName: Name
    - phone: Phone Number
    - email: Email
    - tag: Tag
    - address: Address;
    - jobDescription: JobDescription
    - interviewDate: InterviewDate
    - internDuration: InternDuration
    - salary: Salary
    - note: Note
    + getInterviewDate(): InterviewDate
}

Object\FilterCommand --> Object\Model
Object\FilterCommand ...> Object\Person
Object\FilterCommand --|> Object\Command

@enduml
